update footer email

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <div>Here's my <a href="https://www.linkedin.com/in/derek-niro-72114110">LinkedIn</a></div>
         </section>
 
-        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ mail@site.net</footer>
+        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ derek.niro@gmail.com</footer>
 
 
     </body>
