--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Please check out the Contacts page for links to my github, edabit, and LinkedIn profiles. </p>
             </div>
         </section>
-        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ mail@site.net</footer>
+        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ derek.niro@gmail.com</footer>
 
 
     </body>
