--- a/photos.html
+++ b/photos.html
@@ -65,7 +65,7 @@
             </div>
         </section>
 
-        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ mail@site.net</footer>
+        <footer>1234 TEST Street Dallas, TX ◘ 214-555-1234 ◘ derek.niro@gmail.com</footer>
 
 
     </body>
